--- a/src/scan.html
+++ b/src/scan.html
@@ -1,24 +1,61 @@
-    <!doctype html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Meta Events</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" >
-    <link rel="stylesheet" href="css/index.css" >
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <main>
-        <h3>Select which initiative to appreciate:</h3>
-        
-        <a href="home.html" class="button" id="token-to-quest">Quest/Visual Art</a>
-        <a href="home.html" class="button" id=""token-to-candy>Candy/Bar</a>
-        <a href="home.html" class="button" id="token-to-jacob">Jacob/Projection Mapping</a>
-    </main>
-    
-</body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/home.css" >
+
+    <title>Hackital After Party</title>
+  </head>
+  <body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
+    <div class="container-fluid">
+      <div class="row header">
+        <div class="col-lg-12">
+          <a href="/index.html"><h1><img class="logo" src="//static1.squarespace.com/static/58308d4db8a79b98accccf43/t/59c3fb80ccc5c5f8b9dd4892/1523754888455/?format=1500w" alt="Mettā Creative"><br />
+            Hackital After Party</h1></a>
+        </div>
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+        <div class="col col-xs-3 hidden-xs-down">
+          &nbsp;
+        </div>
+        <div class="col col-sm-6">
+          <br />
+          <h3>Select which initiative to appreciate:</h3>
+
+          <a href="home.html" class="btn button btn-primary" id="token-to-quest">Quest/Visual Art</a>
+          <a href="home.html" class="btn button btn-primary" id=""token-to-candy>Candy/Bar</a>
+          <a href="home.html" class="btn button btn-primary" id="token-to-jacob">Jacob/Projection Mapping</a>
+
+
+        </div>
+        <div class="col col-xs-3 hidden-xs-down">
+          &nbsp;
+        </div>
+      </div>
+    </div>
+
+<style>
+h1 a:hover, h1 a, h1 a:focus{
+  text-decoration: none;
+}
+</style>
+
+
+  </body>
 </html>
